clusters/maia/apps/platform-outline/extras/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/audit:   "restricted"
    pod-security.kubernetes.io/warn:    "restricted"
